# FastAPIProjectManager

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  asgi.py  docker-compose.yml  gunicorn.conf.py  logger.conf.yaml  pyproject.toml  ruff.toml  test.py
alembic/: env.py
alembic/versions/: 064e9f04ae66_initial.py  43434fae4787_initial.py  5158edd5a8d9_.py  63357902409c_initial.py
requirements/: dev.txt  prod.txt
src/: config.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  utils.py
src/auth/: auth_dependencies.py  auth_enums.py  auth_schemas.py  auth_services.py  auth_views.py  authdependencies.py  authutils.py  authviews.py  hasher.py
src/common/: exc.py
src/common/local_logging/: listener.py
src/common/presentation/: schemas.py
src/common/repositories/: sqlalchemy.py
src/core/database/: sqlalchemy.py
src/database/: db.py  dbmodels.py  redis.py
src/infra/: smtp.py
src/local_logging/: listener.py
src/logic/: api_di_container.py  worker_di_container.py
src/presentation/: dependencies.py
src/project/: project_dependencies.py  project_models.py  project_repositories.py  project_schemas.py  project_services.py  project_views.py  projectdependencies.py  projectmodels.py  projectrepository.py  projectschemas.py  projectservice.py  projectviews.py
src/services/: auth_service.py  hasher_service.py  project_service.py  project_task_aggregation_service.py  task_service.py  user_service.py
src/templates/: project_report_email.html
src/user/: user_dependencies.py  user_enums.py  user_models.py  user_repositories.py  user_schemas.py  user_services.py  user_views.py  userdependencies.py  userenums.py  usermodels.py  userrepository.py  userschemas.py  userservice.py  userviews.py
templates/email/: projectreportemail.html
tests/: conftest.py  mock_data.py  sql.py  sqlalchemy.py
tests/api/: conftest.py  test_auth_views.py  test_authviews.py  test_projectviews.py  test_user_views.py  test_userviews.py
tests/infra/: mock_broker.py
tests/logic/: mock_api_di_container.py  mock_worker_di_container.py
(+176 files in other folders)
