[project]
name = "fastapiprojectmanager"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.17.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.119.0",
    "faststream[rabbit]>=0.6.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.3",
    "psycopg[binary]>=3.2.10",
    "punq>=0.7.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
